--- a/CalculatorUI/src/app/app.component.html
+++ b/CalculatorUI/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="wrapper mat-app-background">
+<div class="wrapper">
   <app-header></app-header>
-  <div class="content mat-app-background">
+  <div class="content">
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
