the program is now using mysql as db. And it is ofc dockerized

--- a/CalculatorUI/src/app/pages/home/home.component.html
+++ b/CalculatorUI/src/app/pages/home/home.component.html
@@ -23,4 +23,10 @@
       <input [value]="result()" readonly matInput>
     </mat-form-field>
   </div>
+
+  @if(calculations().length > 0){
+    @for (calc of calculations(); track calc){
+
+    }
+  }
 </div>
