--- a/CalculatorUI/src/app/shared/constants/header/header.component.html
+++ b/CalculatorUI/src/app/shared/constants/header/header.component.html
@@ -1,6 +1,5 @@
 <div class="content">
   <div>
-    <img src="assets/logo.png" alt="logo">
+    <img src="assets/real-logo.png" alt="logo">
   </div>
 </div>
-<hr>
