--- a/CalculatorUI/src/app/shared/components/calculation-result-card/calculation-result-card.component.html
+++ b/CalculatorUI/src/app/shared/components/calculation-result-card/calculation-result-card.component.html
@@ -1,5 +1,4 @@
-<mat-card class="example-card">
-
+<mat-card id="calc{{calculationResult.id}}" class="example-card">
   <mat-card-header>
     <mat-card-title id="id">Id: {{calculationResult.id}}</mat-card-title>
     <mat-card-title>{{getCalculation(calculationResult.operation)}}</mat-card-title>
